--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,17 +12,21 @@ description: |
     
 license: MIT
 
-base: core22
+base: core24
 grade: stable 
 confinement: strict
 compression: lzo
 
-architectures:
-  - build-on: amd64
-  - build-on: arm64
-  - build-on: armhf
-  - build-on: ppc64el
-  - build-on: s390x
+platforms:
+  amd64:
+    build-on: [amd64]
+    build-for: [amd64]
+  arm64:
+    build-on: [arm64]
+    build-for: [arm64]
+  s390x:
+    build-on: [s390x]
+    build-for: [s390x]
   
 assumes:
   - command-chain
@@ -48,8 +52,8 @@ parts:
       - go
       
     override-pull: |
-      snapcraftctl pull
-      snapcraftctl set-version "$(git describe --tags | sed 's/^v//' | cut -d "-" -f1)"    
+      craftctl pull
+      craftctl set-version "$(git describe --tags | sed 's/^v//' | cut -d "-" -f1)"    
 
   homeishome-launch:
     plugin: nil
